--- a/languages.yaml
+++ b/languages.yaml
@@ -1,4 +1,9 @@
 en:
   PLUGIN_MICROPUB:
-    TEXT_VARIABLE: Text Variable
-    TEXT_VARIABLE_HELP: Text to add to the top of a page
+    ROUTE: Route
+    ROUTE_HELP: The route to the Micropub Endpoint
+
+nl:
+  PLUGIN_MICROPUB:
+    ROUTE: Route
+    ROUTE_HELP: De route naar het Micropub Endpoint
