--- a/languages.yaml
+++ b/languages.yaml
@@ -2,8 +2,16 @@ en:
   PLUGIN_MICROPUB:
     ROUTE: Route
     ROUTE_HELP: The route to the Micropub Endpoint
+    ADVERTISE_METHOD: Advertise Method
+    ADVERTISE_METHOD_HELP: The method used to advertise the endpoint to the client
+    ADVERTISE_HEADER: Header
+    ADVERTISE_LINK: Link
 
 nl:
   PLUGIN_MICROPUB:
     ROUTE: Route
     ROUTE_HELP: De route naar het Micropub Endpoint
+    ADVERTISE_METHOD: Methode van aanbieden
+    ADVERTISE_METHOD_HELP: De methode om het endpoint aan te bieden aan de client
+    ADVERTISE_HEADER: Header
+    ADVERTISE_LINK: Link
