--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -43,3 +43,17 @@ form:
       options:
         header: PLUGIN_MICROPUB.ADVERTISE_HEADER
         link: PLUGIN_MICROPUB.ADVERTISE_LINK
+    parent_page:
+      type: pages
+      label: PLUGIN_MICROPUB.PARENT_PAGE
+      help: PLUGIN_MICROPUB.PARENT_PAGE_HELP
+      size: medium
+      validate:
+        required: true
+    token_endpoint:
+      type: text
+      label: PLUGIN_MICROPUB.TOKEN_ENDPOINT
+      help: PLUGIN_MICROPUB.TOKEN_ENDPOINT_HELP
+      size: medium
+      validate:
+        required: true
