--- a/languages.yaml
+++ b/languages.yaml
@@ -10,6 +10,8 @@ en:
     PARENT_PAGE_HELP: The page that new pages will be created as childs to
     TOKEN_ENDPOINT: Token Endpoint
     TOKEN_ENDPOINT_HELP: Indie Login Token Endpoint (Must be same as configured on home page)
+    POST_TEMPLATE: Post Page Template
+    POST_TEMPLATE_HELP: Page template file name for posts
     MESSAGES:
       CREATED: Your post has been created.
       INTERNAL_SERVER_ERROR: An internal error has occurred. Please contact administrator for more information.
@@ -27,6 +29,8 @@ nl:
     PARENT_PAGE_HELP: De pagina waar nieuwe pagina's als kind van worden aangemaakt
     TOKEN_ENDPOINT: Token Endpoint
     TOKEN_ENDPOINT_HELP: Indie Login Token Endpoint (Moet gelijk zijn als geconfigureerd op startpagina)
+    POST_TEMPLATE: Post paginasjabloon
+    POST_TEMPLATE_HELP: Besstandsnaam paginasjabloon voor berichten ('posts')
     MESSAGES:
       CREATED: Je bericht is aangemaakt.
       INTERNAL_SERVER_ERROR: Er is een interne fout opgetreden. Neem contact op met de beheerder voor meer informatie.
