--- a/languages.yaml
+++ b/languages.yaml
@@ -14,6 +14,7 @@ en:
     POST_TEMPLATE_HELP: Page template file name for posts
     MESSAGES:
       CREATED: Your post has been created.
+      UNAUTHORIZED: Unauthorized.
       INTERNAL_SERVER_ERROR: An internal error has occurred. Please contact administrator for more information.
       NOT_IMPLEMENTED: Feature not implemented. Please contact administrator for more information.
 
@@ -33,5 +34,6 @@ nl:
     POST_TEMPLATE_HELP: Bestandsnaam paginasjabloon voor berichten ('posts')
     MESSAGES:
       CREATED: Je bericht is aangemaakt.
+      UNAUTHORIZED: Niet geautoriseerd.
       INTERNAL_SERVER_ERROR: Er is een interne fout opgetreden. Neem contact op met de beheerder voor meer informatie.
       NOT_IMPLEMENTED: Mogelijkheid niet geimplementeerd. Neem contact op met de beheerder voor meer informatie.
