--- a/languages.yaml
+++ b/languages.yaml
@@ -16,6 +16,7 @@ en:
       CREATED: Your post has been created.
       BAD_REQUEST: Bad request.
       UNAUTHORIZED: Unauthorized.
+      FORBIDDEN: Forbidden.
       INTERNAL_SERVER_ERROR: An internal error has occurred. Please contact administrator for more information.
       NOT_IMPLEMENTED: Feature not implemented. Please contact administrator for more information.
 
@@ -37,5 +38,6 @@ nl:
       CREATED: Je bericht is aangemaakt.
       BAD_REQUEST: Ongeldig verzoek.
       UNAUTHORIZED: Niet geautoriseerd.
+      FORBIDDEN: Niet toegestaan.
       INTERNAL_SERVER_ERROR: Er is een interne fout opgetreden. Neem contact op met de beheerder voor meer informatie.
       NOT_IMPLEMENTED: Mogelijkheid niet geimplementeerd. Neem contact op met de beheerder voor meer informatie.
