--- a/languages.yaml
+++ b/languages.yaml
@@ -6,8 +6,8 @@ en:
     ADVERTISE_METHOD_HELP: The method used to advertise the endpoint to the client
     ADVERTISE_HEADER: Header
     ADVERTISE_LINK: Link
-    PARENT_PAGE: Parent Page
-    PARENT_PAGE_HELP: The page that new pages will be created as childs to
+    PARENT_ROUTE: Parent Page
+    PARENT_ROUTE_HELP: The page that new pages will be created as childs to
     TOKEN_ENDPOINT: Token Endpoint
     TOKEN_ENDPOINT_HELP: Indie Login Token Endpoint (Must be same as configured on home page)
     POST_TEMPLATE: Post Page Template
@@ -28,8 +28,8 @@ nl:
     ADVERTISE_METHOD_HELP: De methode om het endpoint aan te bieden aan de client
     ADVERTISE_HEADER: Header
     ADVERTISE_LINK: Link
-    PARENT_PAGE: Ouderpagina
-    PARENT_PAGE_HELP: De pagina waar nieuwe pagina's als kind van worden aangemaakt
+    PARENT_ROUTE: Ouderpagina
+    PARENT_ROUTE_HELP: De pagina waar nieuwe pagina's als kind van worden aangemaakt
     TOKEN_ENDPOINT: Token Endpoint
     TOKEN_ENDPOINT_HELP: Indie Login Token Endpoint (Moet gelijk zijn als geconfigureerd op startpagina)
     POST_TEMPLATE: Post paginasjabloon
